05-Services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kubia
spec:
  tls:
  - hosts:
      - www.kubia-example.com
    secretName: tls-secret
  rules:
  - host: "www.kubia-example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubia
            port:
              number: 80
